--- a/sass/app.scss
+++ b/sass/app.scss
@@ -3,6 +3,8 @@
 @import "./elements/base";
 
 // Components
+@import "./components/app-structure";
+@import "./components/site-header";
 @import "./components/videos";
 
 // Components
