--- a/sass/components/_site-header.scss
+++ b/sass/components/_site-header.scss
@@ -7,13 +7,16 @@
 
   &__title {
     padding: 15px 30px;
+    padding-left: 90px;
     line-height: 30px;
     font-size: 22px;
     font-family: 'Arapey', serif;
     color: rgb(153, 63, 63);
-    background: rgb(220, 217, 224);
+    background: #dcd9e0 20px 50% no-repeat url('../images/icy-ewe--gray.svg');
+    background-size: 50px;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
     box-shadow: 5px 0 10px rgba(0,0,0,0.2);
+
   }
 }
