--- a/views/chat.hbs
+++ b/views/chat.hbs
@@ -2,7 +2,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Preco | I see you</title>
+  <title>{{ title }}</title>
 
   <link href="https://fonts.googleapis.com/css?family=Arvo:400,700|Open+Sans:400,700" rel="stylesheet">
   {{! update this and the file name }}
