--- a/public/stylesheets/preco.0.0.1.css
+++ b/public/stylesheets/preco.0.0.1.css
@@ -47,7 +47,8 @@ button,
   border: 0;
   padding: 0;
   border-radius: 0;
-  outline: 0; }
+  outline: 0;
+  font: inherit; }
 
 * {
   box-sizing: border-box; }
