--- a/public/stylesheets/preco.0.0.1.scss
+++ b/public/stylesheets/preco.0.0.1.scss
@@ -13,9 +13,13 @@
 @import "./elements/preco-base";
 
 // Components @import "./components/";
+@import "./components/font-awesome/fa-regular";
+@import "./components/font-awesome/icons";
 @import "./components/app-structure";
 @import "./components/main-nav";
 @import "./components/splash-screen";
 @import "./components/main-header";
+@import "./components/section-header";
 @import "./components/contact-section";
 @import "./components/company-section";
+@import "./components/project-section";
