--- a/public/stylesheets/components/_company-section.scss
+++ b/public/stylesheets/components/_company-section.scss
@@ -1,9 +1,15 @@
 .company-section {
-  display: flex;
   width: calc(100% - #{$g-4});
   max-width: g(150);
   margin: $g-4 auto;
-  flex-wrap: wrap;
+  padding: 0 $g-4;
+
+  &__companies {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -$g-2;
+    margin-right: -$g-2;
+  }
 
   &__company {
     flex-basis: g(43);
