--- a/public/stylesheets/components/_section-header.scss
+++ b/public/stylesheets/components/_section-header.scss
@@ -1,7 +1,8 @@
 .section-header {
   @include t-heading;
-  width: calc(100% - #{g(10)});
+  width: calc(100% - #{ $g-4 });
   max-width: g(150);
+  padding: 0 $g-4;
   margin: 0 auto;
   margin-top: g(15);
   margin-bottom: $g-2;
