--- a/public/stylesheets/components/_splash-screen.scss
+++ b/public/stylesheets/components/_splash-screen.scss
@@ -2,7 +2,7 @@
   position: relative;
   width: 100vw;
   height: 100%;
-  background: 50% 50% url("/assets/images/crates.jpg");
+  background: 50% 50% url("/assets/images/crates.svg");
   background-size: cover;
 
   &__overlay {
