--- a/views/test-add.hbs
+++ b/views/test-add.hbs
@@ -51,7 +51,7 @@
       <br>
 
       <label for="input__person_company_id">Company*</label>
-      <select id="input__person_company_id"t name="id" required>
+      <select id="input__person_company_id"t name="company_id" required>
         <option label="-- Choose your company --" selected disabled></option>
         {{#each companies}}
           <option label="{{ this.company_name }}" value="{{ this.id }}"></option>
