Add data module

--- a/views/add-data.hbs
+++ b/views/add-data.hbs
@@ -176,7 +176,14 @@
       </div>
 
       <div class="add-form__field">
-        <label for="input__notes">Other notes</label>
+        <label for="input__notes">Description</label>
+        <div>
+          <textarea id="input__description" type="text" name="description"></textarea>
+        </div>
+      </div>
+
+      <div class="add-form__field">
+        <label for="input__notes">Internal notes</label>
         <div>
           <textarea id="input__notes" type="text" name="notes"></textarea>
         </div>
