Store encrypted passwords

--- a/views/add-data.hbs
+++ b/views/add-data.hbs
@@ -41,6 +41,13 @@
         </div>
 
         <div class="add-form__field">
+          <label for="input__person_password">Password</label>
+          <div>
+            <input id="input__person_password" type="password" name="password" placeholder="*** ***">
+          </div>
+        </div>
+
+        <div class="add-form__field">
           <label for="input__person_phone">Phone 1</label>
           <div>
             <input id="input__person_phone" type="tel" name="phone_1" placeholder="+65 (0) 12345678">
