--- a/views/add-data.hbs
+++ b/views/add-data.hbs
@@ -43,7 +43,7 @@
         <div class="add-form__field">
           <label for="input__person_password">Password</label>
           <div>
-            <input id="input__person_password" type="password" name="password" placeholder="*** ***">
+            <input id="input__person_password" type="password" name="password" placeholder="*******">
           </div>
         </div>
 
